class.newInstance() deprecated in java17.